--- a/Eventures/Views/Shared/_Layout.cshtml
+++ b/Eventures/Views/Shared/_Layout.cshtml
@@ -38,10 +38,20 @@
                                         @if (User.IsInRole("Administrator"))
                                         {
                                         <a class="dropdown-item" href="/Events/Create">Create Event</a>}
+                                        
                                     </div>
                                 </div>
                             </li>
+
                         }
+                        @if (User.IsInRole("Administrator"))
+                         {
+                          <li class="nav-item">
+                               <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a>
+                          </li>}
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
