--- a/Eventures/Views/Orders/Index.cshtml
+++ b/Eventures/Views/Orders/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Eventures.App.Models.OrderListingViewModel>
+﻿@using Eventures.App.Models
+@model IEnumerable<Eventures.App.Models.OrderListingViewModel>
 
 @{
 
@@ -8,7 +9,7 @@ ViewData["Title"] = "Index";
 
 <h1>All Orders</h1>
 
-E<table class="table">
+<table class="table">
 
     <tr>
         <th>#</th>
