--- a/Eventures/Views/Events/All.cshtml
+++ b/Eventures/Views/Events/All.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Eventures.App.Models.EventAllViewModel>
+﻿@using Eventures.App.Models
+@model IEnumerable<Eventures.App.Models.EventAllViewModel>
     @{
         ViewData["Title"] = "All Events";
     }
@@ -46,7 +47,7 @@
                         @Html.DisplayFor(modelItem => item.Place)
                     </td>
                     <td>
-                        @await Html.PartialAsync("_OrderPartial", new OrderCreateBindingModel { EventId = item.Id})
+                        @await Html.PartialAsync("_OrderPartialView", new OrderCreateBindingModel { EventId = item.Id})
                     </td>
                 </tr>
             }
